# ferrimoji

./: Cargo.toml  README.markdown
.github/workflows/: rust.yml
src/: lib.rs  main.rs
