[package]
name = "ferrimoji"
version = "1.0.0"
edition = "2021"
license = "MIT"
authors = ["Alexander Abraham <youreccentricity@outlook.com>"]
description= "When Ferris wants pictures."
homepage = "https://github.com/iamtheblackunicorn/ferrimoji"
repository = "https://github.com/iamtheblackunicorn/ferrimoji"
documentation = "https://github.com/iamtheblackunicorn/ferrimoji"
readme = "README.markdown"
categories = ["command-line-utilities"]
exclude = [
  "/.github"
]
